# PySnap

./: .gitignore  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml
pysnap/common/: __init__.py  __main__.py
pysnap/vbscan/: __init__.py  __main__.py
pysnap/vbsnap/: __init__.py  __main__.py
