[project]
name = "pysnap"
description = "python VBoxManage tools"
version = "0.0.7"
dependencies = []

[build-system]
requires = ["build", "doit", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
pysnap = "pysnap"

[project.scripts]
vbsnap = "pysnap.vbsnap.__main__:starter"
